--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,13 @@
 <!--                </exclusion>-->
 <!--            </exclusions>-->
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka_2.12</artifactId>
+            <version>2.6.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
